--- a/MarkDown/第5章_オブジェクト指向設計の真髄.md
+++ b/MarkDown/第5章_オブジェクト指向設計の真髄.md
@@ -1,40 +1,40 @@
-# 第5章　オブジェクト指向設計の真髄
+# 第5章 オブジェクト指向設計の真髄
 
 オブジェクト指向設計の核心は、SOLID原則に代表される設計原則の理解と適用である。本章では、これらの原則を深く理解し、実践的な設計スキルを身につける。
 
 ![SOLID原則の構造図](Images/solid-principles-diagram.md)
 
-## 5.1　単一責務原則の深い理解
+## 5.1 単一責務原則の深い理解
 
-### 5.1.1　単一責務原則（SRP）の本質
+### 5.1.1 単一責務原則(SRP)の本質
 
-Robert C. Martin（Uncle Bob）が提唱したSOLID原則の最初の原則である単一責務原則（Single Responsibility Principle）は、オブジェクト指向設計の根幹を成す重要な概念である。
+Robert C. Martin(Uncle Bob)が提唱したSOLID原則の最初の原則である単一責務原則(Single Responsibility Principle)は、オブジェクト指向設計の根幹を成す重要な概念である。
 
 > 「クラスが変更される理由は一つでなければならない」
 
-しかし、この定義は表面的な理解にとどまりがちである。より深い理解のためには、**責務（Responsibility）**の概念を正しく把握する必要がある。
+しかし、この定義は表面的な理解にとどまりがちである。より深い理解のためには、**責務(Responsibility)**の概念を正しく把握する必要がある。
 
-### 5.1.2　責務の定義と識別
+### 5.1.2 責務の定義と識別
 
 #### 責務とは何か
 
-責務とは、**システム内の特定のアクター（利害関係者）に対する義務**である。アクターとは、システムの変更を要求する人々やプロセスのグループを指す。
+責務とは、**システム内の特定のアクター(利害関係者)に対する義務**である。アクターとは、システムの変更を要求する人々やプロセスのグループを指す。
 
 ```csharp
-// 複数のアクターに対する責務が混在している例（SRP違反）
+// 複数のアクターに対する責務が混在している例(SRP違反)
 public class Employee
 {
     public string Name { get; set; }
     public decimal BaseSalary { get; set; }
     public string Department { get; set; }
     
-    // アクター1: 人事部門（給与計算）
+    // アクター1: 人事部門(給与計算)
     public decimal CalculateOvertimePay(int overtimeHours)
     {
         return BaseSalary / 160 * 1.5m * overtimeHours;
     }
     
-    // アクター2: 経理部門（会計処理）
+    // アクター2: 経理部門(会計処理)
     public void SaveToDatabase()
     {
         using var connection = new SqlConnection(connectionString);
@@ -47,7 +47,7 @@ public class Employee
         command.ExecuteNonQuery();
     }
     
-    // アクター3: ITオペレーション（レポート生成）
+    // アクター3: ITオペレーション(レポート生成)
     public string GenerateReport()
     {
         return $"Employee Report\n" +
@@ -58,7 +58,7 @@ public class Employee
 }
 ```
 
-この設計の問題点：
+この設計の問題点:
 - **人事部門**が給与計算ルールを変更したい
 - **経理部門**がデータベーススキーマを変更したい  
 - **ITオペレーション**がレポート形式を変更したい
@@ -186,7 +186,7 @@ public class EmployeeReportGenerator
 }
 ```
 
-### 5.1.3　責務の粒度
+### 5.1.3 責務の粒度
 
 #### 適切な責務レベルの判断
 
@@ -255,7 +255,7 @@ public class Customer
         Status = CustomerStatus.Active;
     }
     
-    // 顧客ドメインの責務：ステータス管理
+    // 顧客ドメインの責務:ステータス管理
     public void Deactivate(DeactivationReason reason)
     {
         if (Status == CustomerStatus.Inactive)
@@ -276,7 +276,7 @@ public class Customer
 }
 ```
 
-### 5.1.4　コヘージョン（結束度）とカップリング（結合度）
+### 5.1.4 コヘージョン(結束度)とカップリング(結合度)
 
 #### 高いコヘージョンの実現
 
@@ -328,7 +328,7 @@ public class PriceCalculator
 #### 低いカップリングの実現
 
 ```csharp
-// 疎結合な設計：インターフェースによる抽象化
+// 疎結合な設計:インターフェースによる抽象化
 public interface INotificationService
 {
     Task SendAsync(NotificationRequest request);
@@ -381,16 +381,16 @@ public class EmailNotificationService : INotificationService
 }
 ```
 
-## 5.2　カプセル化と情報隠蔽
+## 5.2 カプセル化と情報隠蔽
 
-### 5.2.1　カプセル化の真の意味
+### 5.2.1 カプセル化の真の意味
 
 カプセル化は単にフィールドをprivateにすることではない。それは**データと振る舞いを一つのユニットにまとめ、内部実装を外部から隠蔽する**ことである。
 
 #### データ中心設計の問題
 
 ```csharp
-// アンチパターン：データ中心設計
+// アンチパターン:データ中心設計
 public class Order
 {
     public List<OrderItem> Items { get; set; } = new();
@@ -400,7 +400,7 @@ public class Order
     public OrderStatus Status { get; set; }
 }
 
-// 外部でビジネスロジックを実装（問題のある設計）
+// 外部でビジネスロジックを実装(問題のある設計)
 public class OrderService
 {
     public void AddItem(Order order, Product product, int quantity)
@@ -437,7 +437,7 @@ public class OrderService
 #### 振る舞い中心設計
 
 ```csharp
-// 改善された設計：カプセル化されたOrder
+// 改善された設計:カプセル化されたOrder
 public class Order
 {
     private readonly List<OrderItem> _items = new();
@@ -449,7 +449,7 @@ public class Order
     public IReadOnlyList<OrderItem> Items => _items.AsReadOnly();
     public OrderStatus Status => _status;
     
-    // 計算されたプロパティ：一貫性を保証
+    // 計算されたプロパティ:一貫性を保証
     public Money Subtotal => _items
         .Select(item => item.LineTotal)
         .Aggregate(Money.Zero, (sum, lineTotal) => sum.Add(lineTotal));
@@ -540,7 +540,7 @@ public class OrderItem
 }
 ```
 
-### 5.2.2　不変性（Immutability）の活用
+### 5.2.2 不変性(Immutability)の活用
 
 #### 不変オブジェクトの利点
 
@@ -696,14 +696,14 @@ var customer = new CustomerProfileBuilder()
     .Build();
 ```
 
-## 5.3　継承と委譲の適切な使い分け
+## 5.3 継承と委譲の適切な使い分け
 
-### 5.3.1　継承の適切な使用場面
+### 5.3.1 継承の適切な使用場面
 
 #### 「is-a」関係の実装
 
 ```csharp
-// 適切な継承の例：明確な「is-a」関係
+// 適切な継承の例:明確な「is-a」関係
 public abstract class Vehicle
 {
     public string Make { get; }
@@ -743,7 +743,7 @@ public abstract class Vehicle
     public abstract FuelConsumption CalculateFuelConsumption(Distance distance);
 }
 
-// 具体的な実装：「Car is a Vehicle」
+// 具体的な実装:「Car is a Vehicle」
 public class Car : Vehicle
 {
     public Engine Engine { get; }
@@ -779,7 +779,7 @@ public class Car : Vehicle
     }
 }
 
-// 別の実装：「Motorcycle is a Vehicle」
+// 別の実装:「Motorcycle is a Vehicle」
 public class Motorcycle : Vehicle
 {
     public int EngineSize { get; }
@@ -827,7 +827,7 @@ public class Motorcycle : Vehicle
 }
 ```
 
-### 5.3.2　委譲（Delegation）の活用
+### 5.3.2 委譲(Delegation)の活用
 
 #### 「has-a」関係の実装
 
@@ -879,12 +879,12 @@ public class OrderService
             // 1. 注文作成
             var order = Order.Create(command.CustomerId, command.Items);
             
-            // 2. 在庫引当（委譲）
+            // 2. 在庫引当(委譲)
             var inventoryResult = await ReserveInventoryAsync(order);
             if (!inventoryResult.IsSuccess)
                 return OrderProcessingResult.Failed(inventoryResult.ErrorMessage);
             
-            // 3. 決済処理（委譲）
+            // 3. 決済処理(委譲)
             var paymentResult = await ProcessPaymentAsync(order);
             if (!paymentResult.IsSuccess)
             {
@@ -896,7 +896,7 @@ public class OrderService
             order.Confirm();
             await _orderRepository.SaveAsync(order);
             
-            // 5. 通知送信（委譲）
+            // 5. 通知送信(委譲)
             await _notificationService.SendOrderConfirmationAsync(order);
             
             _logger.LogInformation("Order {OrderId} processed successfully", order.Id);
@@ -954,12 +954,12 @@ public class OrderService
 }
 ```
 
-### 5.3.3　Composition over Inheritance
+### 5.3.3 Composition over Inheritance
 
 #### Strategy パターンによる柔軟な設計
 
 ```csharp
-// 継承ベースの設計（硬直的）
+// 継承ベースの設計(硬直的)
 public abstract class ShippingCalculator
 {
     public abstract decimal CalculateShippingCost(Package package, Address destination);
@@ -981,7 +981,7 @@ public class ExpressShippingCalculator : ShippingCalculator
     }
 }
 
-// 委譲ベースの設計（柔軟）
+// 委譲ベースの設計(柔軟)
 public interface IShippingStrategy
 {
     decimal CalculateCost(Package package, Address destination);
@@ -1076,9 +1076,9 @@ public class ExpressShippingStrategy : IShippingStrategy
 }
 ```
 
-## 5.4　ポリモーフィズムの効果的活用
+## 5.4 ポリモーフィズムの効果的活用
 
-### 5.4.1　ポリモーフィズムの種類
+### 5.4.1 ポリモーフィズムの種類
 
 #### サブタイプポリモーフィズム
 
@@ -1182,7 +1182,7 @@ public class ReportService
 }
 ```
 
-#### パラメトリックポリモーフィズム（ジェネリクス）
+#### パラメトリックポリモーフィズム(ジェネリクス)
 
 ```csharp
 // ジェネリック型による抽象化
@@ -1277,10 +1277,10 @@ public class ProductRepository : RepositoryBase<Product, Guid>
 }
 ```
 
-### 5.4.2　Visitor パターンによる操作の拡張
+### 5.4.2 Visitor パターンによる操作の拡張
 
 ```csharp
-// Visitor パターン：型に新しい操作を追加
+// Visitor パターン:型に新しい操作を追加
 public interface IShapeVisitor<T>
 {
     T VisitCircle(Circle circle);
@@ -1415,17 +1415,17 @@ public class ShapeProcessor
 }
 ```
 
-## 5.5　実践演習：オブジェクト指向設計
+## 5.5 実践演習:オブジェクト指向設計
 
-### 5.5.1　要求分析から設計へ
+### 5.5.1 要求分析から設計へ
 
-#### 演習：ECサイトの注文処理システム
+#### 演習:ECサイトの注文処理システム
 
-**要求**：
+**要求**:
 1. 顧客は商品をカートに追加できる
-2. 複数の支払い方法に対応（クレジットカード、PayPal、銀行振込）
-3. 配送方法を選択できる（標準、速達、翌日配送）
-4. 割引システム（会員割引、数量割引、キャンペーン割引）
+2. 複数の支払い方法に対応(クレジットカード、PayPal、銀行振込)
+3. 配送方法を選択できる(標準、速達、翌日配送)
+4. 割引システム(会員割引、数量割引、キャンペーン割引)
 5. 在庫管理と引当
 6. 注文状況の追跡
 
@@ -1621,7 +1621,7 @@ public class OrderProcessingService
             // 1. 注文作成
             var order = CreateOrderFromCommand(command);
             
-            // 2. 割引計算（複数の計算機を適用）
+            // 2. 割引計算(複数の計算機を適用)
             var totalDiscount = CalculateDiscounts(order, command.Customer);
             order.ApplyDiscount(totalDiscount);
             
@@ -1634,7 +1634,7 @@ public class OrderProcessingService
             if (!inventoryResult.IsSuccess)
                 return OrderResult.InventoryFailure(inventoryResult.ErrorMessage);
             
-            // 5. 決済処理（適切なプロセッサーを選択）
+            // 5. 決済処理(適切なプロセッサーを選択)
             var paymentProcessor = _paymentProcessors.First(p => p.SupportedMethod == order.PaymentMethod.Type);
             var paymentResult = await paymentProcessor.ProcessAsync(CreatePaymentRequest(order));
             
@@ -1669,7 +1669,7 @@ public class OrderProcessingService
 #### Step 4: 拡張性の確保
 
 ```csharp
-// 新しい支払い方法の追加（既存コードの変更不要）
+// 新しい支払い方法の追加(既存コードの変更不要)
 public class PayPalPaymentProcessor : IPaymentProcessor
 {
     private readonly IPayPalService _paypalService;
@@ -1701,7 +1701,7 @@ public class PayPalPaymentProcessor : IPaymentProcessor
     }
 }
 
-// 新しい割引ルールの追加（既存コードの変更不要）
+// 新しい割引ルールの追加(既存コードの変更不要)
 public class CampaignDiscountCalculator : IDiscountCalculator
 {
     private readonly ICampaignService _campaignService;
@@ -1743,10 +1743,10 @@ public class CampaignDiscountCalculator : IDiscountCalculator
 
 ### 重要なポイント
 
-1. **単一責務原則**：変更の理由に着目し、アクターごとに責務を分離する
-2. **カプセル化**：データと振る舞いを適切に組み合わせ、内部実装を隠蔽する
-3. **継承vs委譲**：「is-a」関係には継承、「has-a」関係には委譲を使用
-4. **ポリモーフィズム**：異なる実装を統一的なインターフェースで扱い、拡張性を確保
+1. **単一責務原則**:変更の理由に着目し、アクターごとに責務を分離する
+2. **カプセル化**:データと振る舞いを適切に組み合わせ、内部実装を隠蔽する
+3. **継承vs委譲**:「is-a」関係には継承、「has-a」関係には委譲を使用
+4. **ポリモーフィズム**:異なる実装を統一的なインターフェースで扱い、拡張性を確保
 
 これらの原則を適切に適用することで、保守性が高く、拡張しやすいソフトウェアを構築できる。
 
